XSALBATROSS-15: Table column filters are not sized correctly on IE6/IE7 XSALBATROSS-16: Rights Management Icons not nicely displayed under IE6 XSTOUCAN-3: Some issues with IE * Some issues remain
git-svn-id: https://svn.xwiki.org/svnroot/xwiki/xwiki-platform/skins/trunk@7947 f329d543-caf0-0310-9063-dda96c69346f

--- a/xwiki-platform-albatross/src/main/resources/albatross/css/table/table.css
+++ b/xwiki-platform-albatross/src/main/resources/albatross/css/table/table.css
@@ -43,7 +43,7 @@
 }
 
 /* Filter input box */
-input[type=text].flt, select.flt {
+input.flt, select.flt {
  background-color: #f5f5f5;
  background-image: url(icons/table/filter.gif);
  background-repeat: no-repeat;
@@ -55,7 +55,7 @@ input[type=text].flt, select.flt {
 }
 
 /* Filter input box when the filter is next to the filter button */
-input[type=text].flt_s, select.flt_s {
+input.flt_s, select.flt_s {
  background-color: #f5f5f5;
  background-image: url(icons/table/filter.gif);
  background-repeat: no-repeat;
